--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,9 @@
-name: CI/CD Pipeline
+name: Go CI/CD Pipeline
 
 on:
   push:
     branches: [master]
-    tags: ['v*.*.*']
+    tags: ['v*.*.*'] # Триггер на теги версий
   pull_request:
     branches: [master]
 
@@ -16,25 +16,30 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
+      - name: Set up Go
+        uses: actions/setup-go@v4
         with:
-          node-version: '18'
+          go-version: '1.21'
 
-      - name: Install dependencies
-        run: npm install
-
-      - name: Run linting
-        run: npm run lint
+      - name: Cache Go modules
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/go/pkg/mod
+            ./.bin
+          key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
 
       - name: Run tests
-        run: npm test
+        run: |
+          go test -v ./...
+          go vet ./...
+          staticcheck ./...
 
   docker-publish:
     name: Publish to DockerHub
-    needs: test
+    needs: test # Зависит от успешного прохождения тестов
     runs-on: ubuntu-latest
-    if: startsWith(github.ref, 'refs/tags/')
+    if: startsWith(github.ref, 'refs/tags/') # Только для тегов
 
     steps:
       - name: Checkout code
@@ -50,7 +55,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v4
         with:
-          images: ${{ secrets.DOCKER_HUB_USERNAME }}/your-app-name
+          images: ${{ secrets.DOCKER_HUB_USERNAME }}/workflowmain
           tags: |
             type=ref,event=tag
             type=sha
