--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,13 +3,13 @@ name: Go CI/CD Pipeline
 on:
   push:
     branches: [master]
-    tags: ['v*.*.*'] # Триггер на теги версий
+    tags: ['v*.*.*']
   pull_request:
     branches: [master]
 
 jobs:
   test:
-    name: Run Tests
+    name: Run Tests and Linters
     runs-on: ubuntu-latest
 
     steps:
@@ -20,26 +20,32 @@ jobs:
         uses: actions/setup-go@v4
         with:
           go-version: '1.21'
+          check-latest: true
 
       - name: Cache Go modules
         uses: actions/cache@v3
         with:
           path: |
             ~/go/pkg/mod
-            ./.bin
+            ~/go/bin
           key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
 
+      - name: Install staticcheck
+        run: go install honnef.co/go/tools/cmd/staticcheck@latest
+
       - name: Run tests
+        run: go test -v ./...
+
+      - name: Run vet and staticcheck
         run: |
-          go test -v ./...
           go vet ./...
-          staticcheck ./...
+          ~/go/bin/staticcheck ./...
 
   docker-publish:
     name: Publish to DockerHub
-    needs: test # Зависит от успешного прохождения тестов
+    needs: test
     runs-on: ubuntu-latest
-    if: startsWith(github.ref, 'refs/tags/') # Только для тегов
+    if: startsWith(github.ref, 'refs/tags/')
 
     steps:
       - name: Checkout code
